--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
     <title>M&M Works</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <div class="header-wrapper">
                 <div class="header-logo">
                     <a href="#">
-                        <img src="./_img/Variant=Light, Type=Works.jpg" alt="logo M&M Works">
+                        <img src="./_loga/Variant=Light, Type=Works.svg" alt="logo M&M Works">
                     </a>
                 </div>
 
@@ -26,7 +27,7 @@
                 <div>
                     <div>
                         <button>
-                            <!--IkONA sem prijde-->
+                            <i class="bi bi-telephone"></i>
                             <p>Kontaktujte nás</p>
                         </button>
                     </div>
@@ -57,15 +58,99 @@
             </div>
 
             <div>
-                <!--Slider-->
+                <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+                    <div class="splide__track">
+                            <ul class="splide__list">
+                                <li class="splide__slide">Slide 01</li>
+                                <li class="splide__slide">Slide 02</li>
+                                <li class="splide__slide">Slide 03</li>
+                            </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
 
     <footer>
         <div class="footer-container">
-            
+            <div>
+                <div>
+                    <div>
+                        <p>Kontakt</p>
+                        <h2>Chceš se k nám přidat?</h2>
+                        <p>Vždy radi obohatíme náš tým o skúsených i menej skúsených ľudí, s chuťou zdokonaľovať sa a obohatiť našu spoločnosť na rôznych postoch. V prípade záujmu nás kontaktujte.</p>
+                    </div>
+                    
+                    <div>
+                        <div>
+                            <!--Zde doplnit ikonu-->
+                            <p>123 456 789</p>
+                            <!--Zde doplnit ikonu-->
+                            <p>contact@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <form>
+
+                        </form>
+                    </div>
+
+                    <div>
+                        <button>Odeslat</button>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <div>
+                        <a href="#">
+                            <img src="./_loga/Variant=Dark, Type=Works.svg" alt="logo M&M Works">
+                        </a>
+                    </div>
+
+                    <div>
+                        <p>+421 907 639 133</p>
+                        <p>info@mamworks.eu</p>
+                    </div>
+                </div>
+
+                <div>
+                    <h4>Fakturační údaje</h4>
+                    <p>M&M Works s.r.o. </p>
+                    <p>Šarišské Lužianky 20, 08232 Kojatice</p>
+                    <p>IČO: 53 976 401 DIČ: 2121547494</p>
+                    <p>Bankové spojenie: ČSOB a.s.</p>
+                    <p>SWIFT: CEKOSKBX </p>
+                    <p>IBAN: SK47 7500 0000 0040 2936 0964</p>
+                </div>
+
+                <div>
+                    <h4>M&M Works</h4>
+                    <p>O nás</p>
+                    <p>Elektroinstalace</p>
+                    <p>Logisticka</p>
+                    <p>Kontakt</p>
+                    <p>Privacy policy</p>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <p>© 2023 M&M Works s.r.o.</p>
+                </div>
+
+                <div>
+                    Created by Bengr / Design by Tomáš Křenek
+                </div>
+            </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
