--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>M&M Works</title>
 </head>
 <body>
+    <!--Header-->
     <header>
         <div class="header-container">
             <div class="header-wrapper">
@@ -45,6 +46,7 @@
         </div>
     </header>
 
+    <!--Main content-->
     <main>
         <div class="main-container">
             <div>
@@ -71,6 +73,7 @@
         </div>
     </main>
 
+    <!--Footer -->
     <footer>
         <div class="footer-container">
             <div>
