--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     </a>
                 </div>
 
-                <nav>
+                <nav class="header-nav">
                     <ul>
                         <li><a href="elektroinstalace">Elektroinstalace</a></li>
                         <li><a href="logistika">Logistika</a></li>
                     </ul>
                 </nav>
 
-                <div>
+                <div class="header-list">
                     <div>
                         <button>
                             <i class="bi bi-telephone"></i>
