--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </nav>
 
                 <div class="header-list">
-                    <div>
+                    <div class="header-btn">
                         <button>
                             <i class="bi bi-telephone"></i>
                             <p>Kontaktujte nás</p>
