--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
                     </div>
 
                     <div class="dropdown">
-                        <button>SK</button>
-                        <!--IKONA sem prijde-->
-                        <div class="dropdown-content">
-                            <a href="#">DE</a>
-                            <a href="#">EN</a>
+                        <div class="select">
+                            <span class="selected">SK</span>
+                            <div class="caret"></div>
                         </div>
+                        <ul class="menu">
+                            <li class="active">SK</li>
+                            <li>DE</li>
+                            <li>EN</li>
+                        </ul>
                     </div>
                 </div>
             </div>
