--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--Main content-->
     <main>
         <div class="main-container">
-            <div>
+            <div class="main-cards">
                 <div>
                     <img src="/_img/Container.jpg">
                 </div>
@@ -66,9 +66,18 @@
                 <div class="splide" role="group" aria-label="Splide Basic HTML Example">
                     <div class="splide__track">
                             <ul class="splide__list">
-                                <li class="splide__slide">Slide 01</li>
-                                <li class="splide__slide">Slide 02</li>
-                                <li class="splide__slide">Slide 03</li>
+                                <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
+                                <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
                             </ul>
                     </div>
                 </div>
