hotovy kousek sekce elektroinstalace

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
                 <nav class="header-nav">
                     <ul>
-                        <li><a href="elektroinstalace">Elektroinstalace</a></li>
-                        <li><a href="logistika">Logistika</a></li>
+                        <li><a href="elektroinstalace.html">Elektroinstalace</a></li>
+                        <li><a href="logistika.html">Logistika</a></li>
                     </ul>
                 </nav>
 
@@ -58,11 +58,15 @@
                 <div class="main-cards">
 
                     <div class="div1">
-                        <img src="/_img/Container.jpg">
+                        <a href="elektroinstalace.html">
+                            <img src="./_img/Container.jpg">
+                        </a>
                     </div>
     
                     <div class="div2">
-                        <img src="/_img/Container.jpg">
+                        <a href="logistika.html">
+                            <img src="./_img/Container.jpg">
+                        </a>
                     </div>
 
                     
