hotova jedna sekce s kartama

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -174,12 +174,12 @@
             </div>
         </section>
 
-        <section>
-            <div>
+        <section class="section-items">
+            <div class="content-items-info">
                 <h2>Proč M&M Works?</h2>
-                <div>
-                    <div>
-                        <div>
+                <div class="items-features">
+                    <div class="items-content">
+                        <div class="items-icon">
                             <img src="/_icons/elektro-bolt.svg">
                         </div>
 
@@ -189,8 +189,8 @@
                         </div>
                     </div>
 
-                    <div>
-                        <div>
+                    <div class="items-content light-color">
+                        <div class="items-icon light-color-icon">
                             <img src="/_icons/elektro-bolt.svg">
                         </div>
 
@@ -200,8 +200,8 @@
                         </div>
                     </div>
 
-                    <div>
-                        <div>
+                    <div class="items-content">
+                        <div class="items-icon">
                             <img src="/_icons/elektro-bolt.svg">
                         </div>
 
