nalezene a opravene chyby

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
             <div class="main-container">
                 <div class="main-content">
                     <div class="main-cards">
-                        <div class="div1">
+                        <div class="main-cards-div1">
                             <a href="elektroinstalace.html">
                                 <img src="./_img/Container-works.jpg">
                             </a>
                         </div>
         
-                        <div class="div2">
+                        <div class="main-cards-div2">
                             <a href="logistika.html">
                                 <img src="./_img/Container-logistics.jpg">
                             </a>
@@ -74,18 +74,18 @@
                         <div class="splide" role="group" aria-label="Splide Basic HTML Example">
                             <div class="splide__track">
                                     <ul class="splide__list">
-                                        <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
-                                        <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
+                                        <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
                                     </ul>
                             </div>
                         </div>
@@ -201,11 +201,11 @@
                         <div class="footer-last-frame">
                             <p>Created by</p>
                             <a href="#">
-                                <img src="/_loga/bengr.svg">
+                                <img src="./_loga/bengr.svg">
                             </a>
                             <p>/ Design by</p>
                             <a href="#">
-                                <img src="/_loga/bengr.svg">
+                                <img src="./_loga/bengr.svg">
                             </a>
                         </div>
                     </div>
