--- a/logistika.html
+++ b/logistika.html
@@ -67,7 +67,7 @@
                     </div>
     
                     <div>
-                        <img src="/_img/image 2.jpg">
+                        <img src="./_img/image 2.jpg">
                     </div>
                 </div>
             </div>
@@ -78,18 +78,18 @@
                 <div class="splide" role="group" aria-label="Splide Basic HTML Example">
                     <div class="splide__track">
                             <ul class="splide__list">
-                                <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-airbnb.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-dropbox.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-linear.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-microsoft.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-slack.svg"></li>
-                                <li class="splide__slide"><img src="/_loga/logo-spotify.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-dropbox.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-linear.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-microsoft.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-slack.svg"></li>
+                                <li class="splide__slide"><img src="./_loga/logo-spotify.svg"></li>
                             </ul>
                     </div>
                 </div>
@@ -203,11 +203,11 @@
                         <div class="footer-last-frame">
                             <p>Created by</p>
                             <a href="#">
-                                <img src="/_loga/bengr.svg">
+                                <img src="./_loga/bengr.svg">
                             </a>
                             <p>/ Design by</p>
                             <a href="#">
-                                <img src="/_loga/bengr.svg">
+                                <img src="./_loga/bengr.svg">
                             </a>
                         </div>
                     </div>
