--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -77,7 +77,7 @@
 
         <section>
             <div class="main-splide-content">
-                <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+                <div class="splide slider1" role="group" aria-label="Splide Basic HTML Example">
                     <div class="splide__track">
                             <ul class="splide__list">
                                 <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
@@ -214,14 +214,43 @@
             </div>
         </section>
 
-        <section>
-            <div>
-                <div>
+        <section class="section-example">
+            <div class="container-example">
+                <div class="info-example">
                     <h2>Ukázky realizací</h2>
                     <p>Naše portfólio zahŕňa prácu v bytových jednotkách, priemyselných halách, obchodných priestoroch a iných. Profesionálny prístup je zaručený pri každom type stavieb.</p>
                 </div>
 
-                <div><!--slider--></div>
+                <div class="splide slider2" role="group" aria-label="Splide Basic HTML Example">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
+                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
             </div>
         </section>
 
