--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
         
                     <div class="main-splide-content">
-                        <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+                        <div class="splide slider1" role="group" aria-label="Splide Basic HTML Example">
                             <div class="splide__track">
                                     <ul class="splide__list">
                                         <li class="splide__slide"><img src="./_loga/logo-airbnb.svg"></li>
