uprava mezi sekcemi a html struktura karty Logistika

--- a/logistika.html
+++ b/logistika.html
@@ -231,8 +231,27 @@
 
                 <div class="services-items">
                     <div class="services-text services-part">
-                        <h2>Pôsobíme v Slovensku, Rakúsku a Nemecku</h2>
-                        <p>Aj napriek tomu, že je trh s montážnymi spoločnosťami presýtený s podobnými alebo rovnakými ponukami,<strong class="highlight-part"> náš tím vyčnieva profesionalitou, spoľahlivosťou, komunikatívnosťou a zodpovedným prístupom, čo zaručuje najvyššiu kvalitu našich prác.</strong></p>
+                        <div>
+                            <h2>Nadrozmerné náklady</h2>
+                            <p>Nadrozmerná preprava je každá, pri ktorej náklad presahuje legislatívou stanovené rozmery. To znamená, že je prekročený aspoň jeden z rozmerov:</p>
+
+                            <ul>
+                                <li>dĺžka viac ako 16,5 m </li>
+                                <li>šírka viac ako 2,55 m </li>
+                                <li>výška viac ako 4 m</li>
+                            </ul>
+                        </div>
+
+                        <div>
+                            <div>
+                                <img src="./_icons/tabler-icon-info-triangle.svg">
+                            </div>
+
+                            <div>
+                                <p>Stanovenú trasu musia schváliť príslušné inštitúcie. Vybavenie všetkých povolení trvá aj niekoľko týždňov.</p>
+                            </div>
+                        </div>
+                        
                     </div>
 
                     <div class="services-img">
