rozdeleni do casti, dodelana sekce v logistice

--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -20,8 +20,8 @@
 
                 <nav class="header-nav">
                     <ul>
-                        <li><a href="elektroinstalace">Elektroinstalace</a></li>
-                        <li><a href="logistika">Logistika</a></li>
+                        <li><a href="elektroinstalace.html">Elektroinstalace</a></li>
+                        <li><a href="logistika.html">Logistika</a></li>
                     </ul>
                 </nav>
 
