--- a/logistika.html
+++ b/logistika.html
@@ -20,8 +20,8 @@
 
                 <nav class="header-nav">
                     <ul>
-                        <li><a href="elektroinstalace">Elektroinstalace</a></li>
-                        <li><a href="logistika">Logistika</a></li>
+                        <li><a href="elektroinstalace.html">Elektroinstalace</a></li>
+                        <li><a href="logistika.html">Logistika</a></li>
                     </ul>
                 </nav>
 
@@ -101,7 +101,7 @@
             <div class="services-features">
                 <div class="services-items">
                     <div class="services-items-logistika">
-                        <div class="services-text services-part">
+                        <div class="services-text services-part w-100">
                             <h2>Medzinárodná nákladná preprava</h2>
                             <p>Cestná nákladná preprava je najčastejšie používaným typom dopravy. Vieme pre Vás zabezpečiť medzinárodnú autodopravu Vášho tovaru, pretože:</p>
                         </div>
@@ -172,7 +172,7 @@
                     </div>
 
                     <div class="services-items-logistika">
-                        <div class="services-text services-part-second">
+                        <div class="services-text services-part-second w-100">
                             <h2>Expresné prepravy</h2>
                             <p>Špecializujeme sa na rýchle expresné transporty s daným termínom doručenia.</p>
                         </div>
@@ -269,77 +269,56 @@
             </div>
         </section>
 
-        <section class="section-items">
-            <div class="content-items-info">
-                <h2>Proč M&M Works?</h2>
-                <div class="items-features">
-                    <div class="items-content">
-                        <div class="items-icon">
-                            <img src="./_icons/elektro-bolt.svg">
-                        </div>
-
-                        <div>
-                            <h5>Preciznost a kvalita</h5>
-                            <p>Sme precízni a záleží nám na detailoch a požiadavkách zákazníka.</p>
-                        </div>
+        <section class="section-application">
+            <div class="feature-app">
+                <div>
+                    <div>
+                        <h2>M&M Works aplikácia</h2>
+                        <p>Naša aplikácia M&M Works online poskytuje všetkým našim zákazníkom nadštandardný servis. Na jednom mieste je možné nájsť všetky informácie týkajúce sa prebiehajúcich transportov.</p>
                     </div>
 
-                    <div class="items-content light-color">
-                        <div class="items-icon light-color-icon">
-                            <img src="./_icons/elektro-bolt.svg">
-                        </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <div>
+                                    <img src="/_icons/tabler-icon-circle-check-filled.svg">
+                                </div>
 
-                        <div>
-                            <h5>Flexibilita</h5>
-                            <p>Sme flexibilní a vieme sa prispôsobiť.</p>
-                        </div>
-                    </div>
+                                <div>
+                                    <p>okamžité informácie o stave objednávok na jednom mieste</p>
+                                </div>
+                            </li>
 
-                    <div class="items-content">
-                        <div class="items-icon">
-                            <img src="./_icons/elektro-bolt.svg">
-                        </div>
+                            <li>
+                                <div>
+                                    <img src="/_icons/tabler-icon-circle-check-filled.svg">
+                                </div>
 
-                        <div>
-                            <h5>Záruka</h5>
-                            <p>Poskytujeme záruku na nami realizovanú prácu.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+                                <div>
+                                    <p>dostupné z akéhokoľvek mobilného zariadenia 24/7.</p>
+                                </div>
+                            </li>
 
-        <section class="section-example">
-            <div class="container-example">
-                <div class="info-example">
-                    <h2>Ukázky realizací</h2>
-                    <p>Naše portfólio zahŕňa prácu v bytových jednotkách, priemyselných halách, obchodných priestoroch a iných. Profesionálny prístup je zaručený pri každom type stavieb.</p>
-                </div>
+                            <li>
+                                <div>
+                                    <img src="/_icons/tabler-icon-circle-check-filled.svg">
+                                </div>
 
-                <div class="splide slider2" role="group" aria-label="Splide Basic HTML Example">
-                    <div class="splide__track">
-                        <ul class="splide__list">
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka1.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka2.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka3.jpg"></li>
-                            <li class="splide__slide splide2"><img src="./_img/elektro-ukazka4.jpg"></li>
+                                <div>
+                                    <p>Každý náš klient má k dispozícii svoj vlastný prístupový bod pod jedinečnými údajmi.</p>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
+
+                <div>
+                    <img src="/_img/tablet-logistic.svg">
+                </div>
             </div>
         </section>
+
+        
 
         <section class="section-aboutus">
             <div class="container-aboutus">
