--- a/logistika.html
+++ b/logistika.html
@@ -177,7 +177,7 @@
                             <p>Špecializujeme sa na rýchle expresné transporty s daným termínom doručenia.</p>
                         </div>
     
-                        <div class="services-logistika">
+                        <div class="services-logistika p-l-56">
                             <ul>
                                 <li class="services-logistika-list">
                                     <div>
@@ -271,13 +271,13 @@
 
         <section class="section-application">
             <div class="feature-app">
-                <div>
-                    <div>
+                <div class="container-app">
+                    <div class="container-app-text">
                         <h2>M&M Works aplikácia</h2>
-                        <p>Naša aplikácia M&M Works online poskytuje všetkým našim zákazníkom nadštandardný servis. Na jednom mieste je možné nájsť všetky informácie týkajúce sa prebiehajúcich transportov.</p>
+                        <p class="app-large">Naša aplikácia M&M Works online poskytuje všetkým našim zákazníkom nadštandardný servis. Na jednom mieste je možné nájsť všetky informácie týkajúce sa prebiehajúcich transportov.</p>
                     </div>
 
-                    <div>
+                    <div class="container-app-list">
                         <ul>
                             <li>
                                 <div>
@@ -312,7 +312,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div class="container-app-img">
                     <img src="/_img/tablet-logistic.svg">
                 </div>
             </div>
