--- a/elektroinstalace.html
+++ b/elektroinstalace.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-        <!--Uvodni-->
+        <!--Introductory Section-->
         <section>
             <div class="elektro-bg">
                 <div class="main-information">
@@ -75,6 +75,7 @@
             </div>
         </section>
 
+        <!--Slider1 in Electrical-Installation-->
         <section class="section-slider1">
             <div class="main-splide-content">
                 <div class="splide slider1 slider-bg" role="group" aria-label="Splide Basic HTML Example">
@@ -98,7 +99,7 @@
             </div>
         </section>
         
-
+        <!--Section Cards-->
         <section class="section-cards">
             <div class="elektro-cards">
                 <div>
@@ -148,6 +149,7 @@
             </div>
         </section>
 
+        <!--Section About Operation-->
         <section class="section-services">
             <div class="services-features">
                 <div class="services-items">
@@ -174,6 +176,7 @@
             </div>
         </section>
 
+        <!--Section About Why-M&M-->
         <section class="section-items">
             <div class="content-items-info">
                 <h2>Proč M&M Works?</h2>
@@ -214,6 +217,7 @@
             </div>
         </section>
 
+        <!--Section About Examples-->
         <section class="section-example">
             <div class="container-example">
                 <div class="info-example">
@@ -246,6 +250,7 @@
             </div>
         </section>
 
+        <!--Section About Us-->
         <section class="section-aboutus">
             <div class="container-aboutus">
                 <div class="container-info">
