--- a/logistika.html
+++ b/logistika.html
@@ -52,7 +52,7 @@
     </header>
 
     <main>
-        <!--Uvodni-->
+        <!--Introductory Section-Logistics-->
         <section>
             <div class="elektro-bg">
                 <div class="main-information">
@@ -74,6 +74,7 @@
             </div>
         </section>
 
+        <!--Slider1 in Logistics-->
         <section class="section-slider1">
             <div class="main-splide-content">
                 <div class="splide slider1 slider-bg" role="group" aria-label="Splide Basic HTML Example">
@@ -97,6 +98,7 @@
             </div>
         </section>
 
+        <!--Section About Transportation-->
         <section class="section-services">
             <div class="services-features">
                 <div class="services-items">
@@ -269,6 +271,7 @@
             </div>
         </section>
 
+        <!--Section About M&M-App-->
         <section class="section-application">
             <div class="feature-app">
                 <div class="container-app">
@@ -318,8 +321,7 @@
             </div>
         </section>
 
-        
-
+        <!--Section About Us-->
         <section class="section-aboutus">
             <div class="container-aboutus">
                 <div class="container-info">
