--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
 
-    <!--Main content-->
+    <!--Introductory Main Content-->
     <main>
         <section>
             <div class="main-container">
